# easy-job-alert

./: README.md
backend/: .gitignore  package.json
backend/src/: index.ts
backend/src/auth/: token-fetcher.ts
bruno/EasyJobAlert/: Run Crew.yml  opencollection.yml
crawler/: crew.py  main.py  pyproject.toml
crawler/agents/: base_agent.py
crawler/auth/: token_fetcher.py
crawler/tasks/: job_tasks.py
crawler/tools/: browser_tool.py
